// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aws-counter.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/aws-counter.test.w": {
      "validates the AWS counter name": {
        "args": {
          "methods": {},
        },
        "pass": true,
        "path": "root/Default/test:validates the AWS counter name",
        "traces": [
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/test:validates the AWS counter name/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`dec.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/dec.test.w": {
      "dec()": {
        "args": {
          "methods": {
            "Counter": [
              "dec",
              "peek",
            ],
          },
        },
        "pass": true,
        "path": "root/Default/test:dec()",
        "traces": [
          {
            "data": {
              "message": "dec()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(5)",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(-4)",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(0)",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(5, "custom-key")",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(-4, "custom-key")",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(0, "custom-key")",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/test:dec()/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`inc.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/inc.test.w": {
      "inc()": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
            ],
          },
        },
        "pass": true,
        "path": "root/Default/test:inc()",
        "traces": [
          {
            "data": {
              "message": "inc()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(5)",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(-4)",
              "result": "6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(0)",
              "result": "2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(5, "custom-key")",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "4",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(-4, "custom-key")",
              "result": "4",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(0, "custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/test:inc()/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`initial.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/initial.test.w": {
      "initial": {
        "args": {
          "methods": {
            "Counter": [
              "initial",
              "peek",
            ],
          },
        },
        "pass": true,
        "path": "root/Default/test:initial",
        "traces": [
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counterA/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "500",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counterB/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-198",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counterC/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/test:initial/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`peek.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/peek.test.w": {
      "peek": {
        "args": {
          "methods": {
            "Counter": [
              "peek",
              "inc",
            ],
          },
        },
        "pass": true,
        "path": "root/Default/test:peek",
        "traces": [
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("my-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("my-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(nil, "my-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("my-key")",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/test:peek/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`set.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/set.test.w": {
      "set()": {
        "args": {
          "methods": {
            "Counter": [
              "set",
              "peek",
            ],
          },
        },
        "pass": true,
        "path": "root/Default/test:set()",
        "traces": [
          {
            "data": {
              "message": "set(42)",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "42",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(-100)",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-100",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(0)",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(42, "custom-key")",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "42",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(-100, "custom-key")",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-100",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(0, "custom-key")",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/Default/test:set()/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;
